# abucket

./: .gitignore  LICENSE  README.md
CameraPreviewSurfaceTexture/: .project  AndroidManifest.xml
CameraPreviewSurfaceView/: .project  AndroidManifest.xml
blackout/: .gitignore  README.md
blackout/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
bottom_line_artifact/: Android.mk  main.cpp
cameraui/: .project  AndroidManifest.xml
format_test/: Android.mk  egl_image_test.cpp  egl_surface_test.cpp
from-tf-web/quickstart/: 1-get-started-tf-contrib-learn-customize.py  1-get-started.ipynb  2-mnist-for-beginners.ipynb  2-mnist-for-beginners.py  3-depp-mnist-for-experts.ipynb  5-tf.contrib.learn.quickstart.py  6-building-input-functions-with-tf.contrib.learn.py  7-logging-monitoring-basics-tf.contrib.learn.py
from-tf-web/tutorial/: 4-a-guide-to-tf-layers-build-convnets.py
gfxnative/: Android.mk  partial_update.cpp
gfxnative/common_native/: Android.mk  AndroidPlatform.cpp  AndroidPlatform.h  EGLRuntime.cpp  HDRImage.cpp  HDRImage.h  Mathematics.h  Matrix.cpp  (+5 more)
gfxvideo/: .project  AndroidManifest.xml
glib_misc/: CMakeLists.txt  childp.c  crashme.c  log.c  log.h  main.c  parent.c  test_main.c
image_check/: Android.mk  pbuffer_surface.cpp  win_surface.cpp
odd_height_yuv_eglimage/: Android.mk  main.cpp  nv21_960x540.data
rgb565-texturing-cmdline/: Android.mk  README.md  golden_bmp_argb.cpp  golden_bmp_argb.data  rgb565.cpp  rgb565.data  rgb565_texture.cpp
spider/: .gitignore
transphone/: .project  AndroidManifest.xml
(+231 files in other folders)
